# 3D-game

./: CMakeLists.txt  README.md  items.txt
engine/: CMakeLists.txt
engine/res/shaders/: fragment.glsl  instanced_vertex.glsl  link.sh  vertex.glsl
engine/src/engine/: gameengine.cpp  gameengine.h  instancedrenderablemesh.cpp  instancedrenderablemesh.h  keyboardcontroller.cpp  keyboardcontroller.h  matrix4x4.cpp  matrix4x4.h  mesh.cpp  mesh.h  meshrenderer.cpp  meshrenderer.h  mousecontroller.cpp  mousecontroller.h  objectlife.cpp  objectlife.h  program.cpp  program.h  renderablemesh.cpp  renderablemesh.h  renderabletexture.cpp  renderabletexture.h  renderabletexturearray.cpp  renderabletexturearray.h  renderer.cpp  renderer.h  resource.h  shader.cpp  shader.h  specificmesh.h  texture.cpp  texture.h  uniform.cpp  uniform.h  uniformmatrix4x4.cpp  uniformmatrix4x4.h  uniformvec3f.cpp  uniformvec3f.h  util.cpp  util.h  (+2 more)
res/models/: axe.mtl  rock.mtl  stick.mtl  test.mtl
res/models/creature/: untitled.blend
res/shaders/: animation_vertex.glsl  grid_fragment.glsl  grid_vertex.glsl  normal_fragment.glsl  normal_geometry.glsl  normal_vertex.glsl  text_fragment.glsl  text_vertex.glsl  water_fragment.glsl  water_vertex.glsl
res/textures/: flower1.tga  flower2.tga  font.tga  font.xcf  grass.tga  grass_blades.tga  light.tga  reeds.tga  rock.tga  spruce_texture_2.tga  stone2.tga  tree.tga  trunk.tga  water.tga
src/: animation.cpp  animation.h  chunk.cpp  chunk.h  crafting.cpp  crafting.h  detailcollection.cpp  detailcollection.h  entity.cpp  entity.h  grid.cpp  grid.h  inventory.cpp  inventory.h  items.cpp  items.h  main.cpp  noisemap.cpp  noisemap.h  plane.cpp  plane.h  player.cpp  player.h  rigidbody.cpp  rigidbody.h  textrenderer.cpp  textrenderer.h  tracer.cpp  tracer.h  vegetation.cpp  vegetation.h  verletpoint.cpp  verletpoint.h  world.cpp  world.h
